Criação e finalização dos componente comment e Avatar

--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -126,12 +126,13 @@
     cursor: pointer;
     transition: backgroud-color 0.1s;
 
-
-
-
 }
 
 
 .commentForm button[type=submit]:hover {
     background: var(--green-300);
+}
+
+.commentList{
+    margin-top: 2rem;
 }
